added missing html tag

--- a/index.html
+++ b/index.html
@@ -35,3 +35,4 @@
     <script src='https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false'></script>
     <script src="js/gmapsPolygon.js"></script>
   </body>
+</html>
