added option to load data from file

--- a/index.html
+++ b/index.html
@@ -14,18 +14,19 @@
   <body ng-controller="PolygonController">
     <div class="text-center">
       <h3>Create List of Polygon Vertices for Google Maps</h3>
-      <button ng-click="addPolygon()" class="btn btn-sm btn-success">Add Polygon</button>
+      <button ng-click="addPolygon()" class="btn btn-sm btn-success">Add New Polygon</button>
+      <input type="file" id="file-input" class="btn btn-sm" />
       <div class="sub-header">Drag and reshape polygon to rebuild coordinate list</div>
     </div>
     
     <div id="map-canvas"></div>
-
     <div class="mt-2">
       <div class="row">
         <div class="col-sm-3" ng-repeat="poly in polygons">
-          <div class="{{colorClasses[$index]}}">Polygon {{$index+1}}</div>
+          <div class="{{colorClasses[$index]}}">{{inputLabels[$index]}}</div>
           <textarea class="info-box" id="info-{{$index}}"></textarea>
         </div>
+        <div class="sub-header" id="file-content"></div>
       </div>
     </div>
 
