restrict file input types

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="text-center">
       <h3>Create List of Polygon Vertices for Google Maps</h3>
       <button ng-click="addPolygon()" class="btn btn-sm btn-success">Add New Polygon</button>
-      <input type="file" id="file-input" class="btn btn-sm" />
+      <input type="file" id="file-input" accept=".dat, .txt" class="btn btn-sm" />
       <div class="sub-header">Drag and reshape polygon to rebuild coordinate list</div>
     </div>
     
